--- a/data/panel_style.css
+++ b/data/panel_style.css
@@ -1,3 +1,11 @@
+body, html {
+  width: 100%;
+  height: 100%;
+  border: 0px;
+  margin: 0px;
+  padding: 0px;
+}
+
 a {
   text-decoration: none;
   font-weight: bold;
@@ -9,13 +17,29 @@ a:hover {
 }
 
 #history {
-  padding: 0px;
+  box-sizing: border-box;
+  padding: 0.5em;
   margin: 0px;
   border: 0px;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
+}
+
+#history-placeholder {
+  display: table;
+  height: 100%;
+  width: 100%;
+  margin: 0px;
+  border: 0px;
+  padding: 0px;
+  text-align: center;
+}
+
+#history-placeholder span {
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .history-entry {
